# TAAC_2026

./: .coverage  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  EXPERIMENTS.md  README.md  TESTING.md  THIRD_PARTY_NOTICES.md  TODO.md  dev.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run.sh  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  deploy-docs.yml
config/baseline/: __init__.py  model.py  utils.py
config/ctr_baseline/: __init__.py  model.py
config/deepcontextnet/: __init__.py  model.py
config/grok/: __init__.py  model.py
config/host_device_info/: __init__.py  runner.py
config/hyformer/: __init__.py  model.py
config/interformer/: __init__.py  model.py  utils.py
config/onetrans/: __init__.py  model.py
config/online_dataset_eda/: runner.py
config/oo/: __init__.py  model.py
config/symbiosis/: __init__.py  model.py
config/unirec/: __init__.py  model.py
config/uniscaleformer/: __init__.py  model.py  utils.py
configs/: baseline.yaml  creatorwyx_grouped_din_adapter.yaml  deep_context_net.yaml  grok_din_readout.yaml  omnigenrec_adapter.yaml  oo_retrieval_adapter.yaml  tencent_sasrec_adapter.yaml  unirec.yaml  unirec_din_readout.yaml  uniscaleformer.yaml  zcyeee_retrieval_adapter.yaml
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  cli.md  dev.md  getting-started.md  index.md  project-layout.md  third-party-notices.md
docs/analysis/: benchmarks.md  dataset-eda.md  evaluation.md  feature-schema.md  index.md
docs/archive/: index.md  official-infer-baseline.md  official-train-baseline.md  sample-schema.md  schema.md  training-schema-snapshot.md
docs/benchmark/: cache-policies.md  embedding-bag-mean.md  flash-attention.md  index.md  pcvr-diagnostics.md  rms-norm.md
docs/experiments/: baseline-plus.md  baseline.md  ctr-baseline.md  deepcontextnet.md  grok.md  host-device-info.md  hyformer.md  index.md  interformer.md  onetrans.md  online-dataset-eda.md  oo.md  rankup.md  (+5 more)
scripts/: benchmark_transformer_backends.py  lint_torch.py  run_gpu_tests.py  verify_gpu_env.py
taac2026/: batch_evaluate.py  config.py  data.py  evaluate.py  evaluation.py  losses.py  optim.py  train.py  truncation_sweep.py  visualize.py
tests/: conftest.py  support.py  test_benchmark_charts.py  test_clean_pycache.py  test_data_pipeline.py  test_dataset_eda.py  test_embedding_collection.py  test_evaluate_cli.py  test_experiment_packages.py  test_experiments_unit.py  test_gpu.py  test_metrics_unit.py  test_model_performance_plot.py  test_model_robustness.py  test_payload.py  test_profiling.py  test_profiling_unit.py  test_quantization.py  test_runtime_integration.py  test_runtime_optimization.py  test_schema_contract.py  test_search.py  test_search_internals.py  test_search_trial.py  test_search_worker.py  test_tech_timeline.py  test_torchrec_embedding.py  test_transformer_blocks.py  test_triton_kernels.py
tools/: benchmark_pcvr_data_pipeline.py  cache-cleanup.sh  generate_pcvr_synthetic_dataset.py  github-cleanup.sh  log_host_device_info.sh
(+452 files in other folders)
